--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -11,12 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Go
-      uses: actions/setup-go@v3
+      uses: actions/setup-go@v5
       with:
         go-version: '1.23.0'
 
     - name: Check out code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v5
 
-    - name: Run tests
-      run: go test ./...
+    - name: Run tests with coverage
+      run: |
+        go test -race -coverprofile=coverage.txt ./...
+        go tool cover -func=coverage.txt
+
+    - name: Upload coverage report to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        file: coverage.txt
+        fail_ci_if_error: true
