trying from https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-go

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -10,21 +10,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23.0'
-
-    - name: Check out code
-      uses: actions/checkout@v4
-
-    - name: Run tests with coverage
-      run: |
-        go test -race -coverprofile=coverage.txt ./...
-        go tool cover -func=coverage.txt
-
-    - name: Upload coverage report to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: coverage.txt
-        fail_ci_if_error: true
+      - uses: actions/checkout@v4
+      - name: Setup Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: 1.23.0
+      - name: Install dependencies
+        run: go get .
+      - name: Test with Go
+        run: go test -json > TestResults.json
+      - name: Upload Go test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Go-results
+          path: TestResults.json
