--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -1,4 +1,4 @@
-name: Go Tests
+name: Run Go Unit Tests
 
 on:
   push:
@@ -16,6 +16,13 @@ jobs:
         with:
           go-version: 1.23.0
       - name: Install dependencies
-        run: go get .
-      - name: Test with Go
-        run: go test -timeout 30s -coverprofile=go-code-cover
+        run: go mod tidy
+      - name: Run Tests with Coverage
+        run: go test -timeout 30s -coverprofile=go-code-coverage.out ./...
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2.3.0
+        with:
+          # github-token: ${\{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          path-to-lcov: './go-code-coverage.out'
+  
