--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -23,6 +23,6 @@ jobs:
         uses: coverallsapp/github-action@v2.3.0
         with:
           # github-token: ${\{ secrets.GITHUB_TOKEN }}
-          repo-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          # repo-token: ${\{ secrets.COVERALLS_REPO_TOKEN }}
           path-to-lcov: './go-code-coverage.out'
   
